Build a tokeniser directly from its own config file
Tokeniser has merged with AbstractTokeniser, with static getTokeniser
method reading directly from the config file to construct the appropriate
tokeniser, so as to decentralise interpretation of the config file on a per
module basis.

At the same time, TalismaneSession constructs on its own any resources
shared by all modules based on config. The equivalent code has been
removed from TalismaneConfig.

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -29,25 +29,131 @@ talismane {
 		
 		# if inFile and inDir are not specified, Talismane will read from STDIN
 		# use inFile if a specific file is being read
-		#inFile = null
+		#in-file = null
 		# use inDir if a full directory needs to be processed
-		#inDir = null
+		#in-dir = null
 		
 		# if outFile and outDir are not specified, Talismane will write to STDOUT
 		# use outFile to write all output to a single file
-		#outFile = null
+		#out-file = null
 		# use outDir to write output to a directory - in combination with inDir, will write one file out per file read in
-		#outDir = null
+			
+		# If provided, will add this suffix to all output files (both in analysis and evaluation). Useful when comparing configurations.
+		suffix = ""
+		
+		#suffix = null
 				
 		# if encoding is not provided, the default encoding for the system will be used
 		#encoding = null
 		
 		# inputEncoding and outputEncoding can override encoding
-		#inputEncoding = null
-		#outputEncoding = null
+		#input-encoding = null
+		#output-encoding = null
 		
 		# The locale in which we are analysing - required if not provided in the language pack
 		#locale = null
+		
+		### The list of lexicons to use
+		# The lexicons are used to find lemmas and morphosyntaxic attributes for known words, and to feed various analysis features
+		lexicons = []
+		
+		# The paths to various external word lists (can be either folders or files)
+		# These are used within regex-based filters and annotators, as well as certain features
+		word-lists = []
+		
+		### A path to a precompiled "diacriticizer", which adds diacritics to words in ALL UPPERCASE prior to analysis.
+		# if left blank, a diacriticizer is automatically constructed from the lexicon, but this takes more time at startup.
+		#diacriticizer = null
+		
+		# Path to a file giving lowercase preferences for all uppercase words with multiple diacriticized possibilities
+		#lowercase-preferences = null
+		
+		# The paths to various external resources (can be either folders or files), used for building features
+		external-resources = []
+		
+		
+		analysis {
+			# Annotators used to filter the raw text and transform it into text that needs to be processed
+			text-filters = []
+			
+			# Annotators to be run before full analysis chain, but after raw text has been filtered
+			pre-annotators = []
+			
+			# at which stage should analysis start
+			start-module = sentence
+			
+			# at which stage should analysis end
+			end-module = parser
+			
+			# Annotators to be run after full analysis chain
+			post-annotators = []
+		}
+		
+		sentence-detector {
+			pre-annotators = []
+			post-annotators = []
+			
+			# Path to the sentence detection model
+			#model = null
+		}
+		
+		tokeniser {
+			pre-annotators = []
+			post-annotators = []
+			
+			### The tokeniser type:
+			# - simple: a deterministic tokeniser purely based on filters
+			# - pattern: a probabilistic tokeniser using supervised machine learning to take tokenisation decisions in areas where certain patterns are matched
+			type = "simple"
+			
+			# If using a probablistic tokeniser, the path to the tokeniser model
+			#model = null
+			
+			### If using a pattern tokeniser, the method: Interval or Compound
+			pattern-tokeniser-type = "Compound"
+			
+			beam-width = 1
+			
+			# should the tokeniser beam be propagated to the pos-tagger
+			propagate-beam = false
+			
+			# A regex for reading previously tokenised input, with various placeholders.
+			preannotated-input-pattern = ".+\t%TOKEN%"
+			
+			# if true, will spew out a file full of low-level analysis details for certain model types
+			include-details = false
+			
+			training {
+				# if a sentence reader is provided, the text of sentences represented by the tokenised input is provided by this reader, one sentence per line.
+				# otherwise, their text for use in tokenisation features is automatically reconstructed from the manually tokenised input, and the spacing may be erroneous
+				#sentenceReader = null
+				
+				# A path to a file containing tokeniser feature descriptors
+				#features = null
+				
+				# A path to a file containing patterns indicating which areas need further testing by the pattern tokeniser
+				#patterns = null
+			}
+		}
+		
+		pos-tagger {
+			# The pos-tag set used when no model has been provided
+			# pos-tag-set
+			
+			# A path to the pos-tagger model
+			#model = null
+		}
+		
+		parser {
+			# The transition system used when no model has been provided: ArcEager or ShiftReduce
+			transition-system = "ArcEager"
+			
+			# The list of possible dependency labels when no model has been provided
+			#dependency-labels = null
+			
+			# A path to the parser model
+			#model = null
+		}
 		
 		analyse {
 			# at which stage should analysis start
@@ -56,32 +162,11 @@ talismane {
 			# at which stage should analysis end
 			endModule = parser
 			
-			### Path to the pos-tag set (required if not in the language-pack)
-			#posTagSet = null
-			
-			### The transition system used: ArcEager or ShiftReduce
-			transitionSystem = "ArcEager"
-			
-			### Path to the list of possible dependency labels (required if not in the language-pack)
-			#dependencyLabels = null
-			
 			### Paths for finding the models
 			#languageModel = null
 			#sentenceModel = null
-			#tokeniserModel = null
 			#posTaggerModel = null
 			#parserModel = null
-			
-			### Which list of lexicons to use when analysing. The lexicons are used to find lemmas and morphosyntaxic attributes for known words, and to feed various analysis features
-			lexicons = []
-			
-			# Whether to preload the lexicon, or only load it the first time its needed
-			# the latter option is only really useful to save time when we're sure the lexicon will not be needed (e.g. command=process)
-			preloadLexicons = true
-			
-			### A path to a precompiled "diacriticizer", which adds diacritics to words in ALL UPPERCASE prior to analysis.
-			# if left blank, a diacriticizer is automatically constructed from the lexicon, but this takes more time at startup.
-			#diacriticizer = null
 			
 			############################################
 			### Parameters controlling how data is input
@@ -103,9 +188,6 @@ talismane {
 			tokenSequenceFiltersReplace = false
 			posTagSequenceFilters = []
 			posTagSequenceFiltersReplace = false
-			
-			# The paths to various external word lists (can be either folders or files), separated by semicolons
-			wordLists = []
 			
 			# How to handle the newline character, options are SPACE (will be replaced by a space) and SENTENCE_BREAK (will break sentences)
 			newline = SENTENCE_BREAK
@@ -142,13 +224,6 @@ talismane {
 			posTaggerRules = []
 			parserRules = []
 			
-			# If output includes the filename (as in builtInTemplate "with_location"), we can give the name of the file to use.
-			# This is only useful in server mode, when the filename is unknown. If an input file is processed, its name is used by default.
-			#fileName = null
-			
-			# If provided, will add this suffix to all output files (both in analysis and evaluation). Useful when comparing configurations.
-			suffix = ""
-			
 			# A string to insert between sections marked for output (e.g. XML tags to be kept in the analysed output).
 			# The String NEWLINE is interpreted as "\n". Otherwise, used literally.
 			outputDivider = ""
@@ -161,7 +236,6 @@ talismane {
 			beamWidth = 1
 			
 			# we can override the beamWidth for individual models, by setting these to positive values
-			tokeniserBeamWidth = 1
 			posTaggerBeamWidth = -1
 			parserBeamWidth = -1
 
@@ -173,16 +247,6 @@ talismane {
 			
 			# If true, feature descriptors will be converted into a single dynamically generated class
 			dynamiseFeatures = false
-			
-			tokeniser {
-				### The tokeniser type:
-				# - simple: a deterministic tokeniser purely based on filters
-				# - pattern: a probabilistic tokeniser using supervised machine learning to take tokenisation decisions in areas where certain patterns are matched
-				type = "simple"
-				
-				### If using a pattern tokeniser, the method: Interval or Compound
-				patternTokeniserType = "Compound"
-			}
 			
 			parser {
 				# How long we will attempt to parse a sentence before leaving the parse as is, in seconds. A value of 0 means the parsing will continue indefinitely.
