--- a/talismane_utils/pom.xml
+++ b/talismane_utils/pom.xml
@@ -68,8 +68,16 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.typesafe</groupId>
+			<artifactId>config</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math3</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-vfs2</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
