Make tokeniser training self-configuring and self-contained
New class, PatternTokniserTrainer, reads the configuration settings
directly.

Also changed talismane_machineLearning to read a local config, so that
individual trainers must use config settings which typically inherit
from machine learning's reference.conf

Made CoNLL formatting depend on configuration for handling of
spaces and underscrores.

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -33,15 +33,14 @@ talismane {
 		# use inDir if a full directory needs to be processed
 		#in-dir = null
 		
-		# if outFile and outDir are not specified, Talismane will write to STDOUT
-		# use outFile to write all output to a single file
+		# if out-file and out-dir are not specified, Talismane will write to STDOUT
+		# use out-file to write all output to a single file
 		#out-file = null
-		# use outDir to write output to a directory - in combination with inDir, will write one file out per file read in
-			
+		# use out-dir to write output to a directory - in combination with in-dir, will write one file out per file read in
+		#out-dir = null
+		
 		# If provided, will add this suffix to all output files (both in analysis and evaluation). Useful when comparing configurations.
 		suffix = ""
-		
-		#suffix = null
 				
 		# if encoding is not provided, the default encoding for the system will be used
 		#encoding = null
@@ -71,7 +70,6 @@ talismane {
 		# The paths to various external resources (can be either folders or files), used for building features
 		external-resources = []
 		
-		
 		analysis {
 			# Annotators used to filter the raw text and transform it into text that needs to be processed
 			text-filters = []
@@ -87,6 +85,9 @@ talismane {
 			
 			# Annotators to be run after full analysis chain
 			post-annotators = []
+			
+			# A character (typically non-printing) which will mark a stop in the input stream and set-off analysis immediately. Must be a single character.
+			end-block-char-code = "\f"
 		}
 		
 		sentence-detector {
@@ -116,23 +117,71 @@ talismane {
 			
 			# should the tokeniser beam be propagated to the pos-tagger
 			propagate-beam = false
-			
-			# A regex for reading previously tokenised input, with various placeholders.
-			preannotated-input-pattern = ".+\t%TOKEN%"
-			
+						
 			# if true, will spew out a file full of low-level analysis details for certain model types
 			include-details = false
 			
-			training {
+			train {
+				# A regex for reading previously tokenised input, with various placeholders.
+				preannotated-input-pattern = ".+\t%TOKEN%"
+			
 				# if a sentence reader is provided, the text of sentences represented by the tokenised input is provided by this reader, one sentence per line.
 				# otherwise, their text for use in tokenisation features is automatically reconstructed from the manually tokenised input, and the spacing may be erroneous
-				#sentenceReader = null
+				#sentence-reader = null
 				
 				# A path to a file containing tokeniser feature descriptors
 				#features = null
 				
 				# A path to a file containing patterns indicating which areas need further testing by the pattern tokeniser
 				#patterns = null
+				
+				machine-learning = ${talismane.machine-learning}
+				
+				pre-annotators = ${talismane.core.tokeniser.pre-annotators}
+				post-annotators = ${talismane.core.tokeniser.post-annotators}
+				
+				# The max sentences to process. If <= 0 will be ignored.
+				sentence-count = 0
+			
+				# The first sentence index to process. Earlier sentences will be skipped.
+				start-sentence = 0
+				
+				cross-validation {
+					# If greater than 0, the input file will be split into foldCount folds
+					# Typically, 10-fold validation is used, if cross-validation is desired
+					fold-count = 0
+
+					# Used when training in cross-validation
+					# If provided, one of the folds will be excluded, numbered from 0 to foldCount - 1
+					exclude-index = 0
+				}
+			}
+			
+			evaluate {
+				# The file to evaluate against the in-file
+				#input-file = null
+
+				# the regex used to read tokens from the evaluation corpus
+				preannotated-input-pattern = ${talismane.core.tokeniser.train.preannotated-input-pattern}
+				
+				pre-annotators = ${talismane.core.tokeniser.pre-annotators}
+				post-annotators = ${talismane.core.tokeniser.post-annotators}
+				
+				# The max sentences to process. If <= 0 will be ignored.
+				sentence-count = 0
+			
+				# The first sentence index to process. Earlier sentences will be skipped.
+				start-sentence = 0
+				
+				cross-validation {
+					# If greater than 0, the input file will be split into foldCount folds
+					# Typically, 10-fold validation is used, if cross-validation is desired
+					fold-count = 0
+					
+					# Used when evaluating in cross-validation
+					# If provided, only a single fold will be processed, numbered from 0 to foldCount -1
+					include-index = 0
+				}
 			}
 		}
 		
@@ -292,22 +341,7 @@ talismane {
 				# A path to a file containing sentence detector feature descriptors
 				#features = null
 			}
-			
-			tokeniser {
-				# the regex used to read tokens from the training corpus
-				readerRegex = ".+\t%TOKEN%"
-				
-				# if a sentence reader is provided, the text of sentences represented by the tokenised input is provided by this reader, one sentence per line.
-				# otherwise, their text for use in tokenisation features is automatically reconstructed from the manually tokenised input, and the spacing may be erroneous
-				#sentenceReader = null
-				
-				# A path to a file containing tokeniser feature descriptors
-				#features = null
-				
-				# A path to a file containing patterns indicating which areas need further testing by the pattern tokeniser
-				#patterns = null
-			}
-			
+
 			posTagger {
 				# the regex used to read tokens from the training corpus
 				readerRegex = ".*\t%TOKEN%\t.*\t%POSTAG%\t.*\t.*\t"
@@ -349,11 +383,6 @@ talismane {
 				
 				# Which locale to use for CSV number formatting. If blank will use the default locale for the current OS.
 				#locale = null
-			}
-			
-			tokeniser {
-				# the regex used to read tokens from the evaluation corpus
-				readerRegex = ${talismane.core.train.tokeniser.readerRegex}
 			}
 			
 			posTagger {
@@ -440,5 +469,21 @@ talismane {
 		
 		# if set to true, the total time of talismane execution will be written to a separate file
 		logStats = false
+		
+		csv {
+			# Which character should separate cells in the CSV files generated
+			separator = "\t"
+		
+			# Which encoding to generate CSV files in. If blank will use the default encoding for the current OS.
+			#encoding = null
+			
+			# Which locale to use for CSV number formatting. If blank will use the default locale for the current OS.
+			#locale = null
+		}
+		
+		conll {
+			# when reading/writing CoNLL format, should we replace spaces with underscores (e.g. in multi-word expressions)
+			spaces-to-underscores = true
+		}
 	}
 }
