Replace command-line interface
And call tokeniser commands (except analyse) directly from TalismaneMain.

The annotated corpus reader is instantiated via reflexion given a class
name in the config. This allows us to code other corpus readers (for
example the PennDepReader for talismane_en).

--- a/talismane_core/pom.xml
+++ b/talismane_core/pom.xml
@@ -90,6 +90,10 @@
 			<artifactId>commons-vfs2</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>net.sf.jopt-simple</groupId>
+			<artifactId>jopt-simple</artifactId>
+		</dependency>
+		<dependency>
 			<!-- Must be before junit! -->
 			<groupId>com.googlecode.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
