--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -107,70 +107,48 @@ talismane {
 			# - pattern: a probabilistic tokeniser using supervised machine learning to take tokenisation decisions in areas where certain patterns are matched
 			type = "simple"
 			
-			# If using a probablistic tokeniser, the path to the tokeniser model
+			# If using a pattern tokeniser, the path to the tokeniser model
 			#model = null
 			
 			### If using a pattern tokeniser, the method: Interval or Compound
 			pattern-tokeniser-type = "Compound"
-			
+						
+			# The beam width used by the tokeniser
 			beam-width = 1
-			
+
 			# should the tokeniser beam be propagated to the pos-tagger
 			propagate-beam = false
 						
 			# if true, will spew out a file full of low-level analysis details for certain model types
 			include-details = false
 			
-			train {
-				# A regex for reading previously tokenised input, with various placeholders.
-				preannotated-input-pattern = ".+\t%TOKEN%"
+			output {
+				### Parameters controlling how data is output
+				# a built-in output template. Options include: default, with_location, with_prob
+				built-in-template = "default"
+				
+				# if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
+				#template = null
+			}
 			
+			input {
+				# the class used to read the training corpus
+				corpus-reader = com.joliciel.talismane.tokeniser.TokenRegexBasedCorpusReader
+
+				# the regex used to read tokens from the evaluation corpus
+				preannotated-pattern = ".+\t%TOKEN%"
+				
+				pre-annotators = ${talismane.core.tokeniser.pre-annotators}
+				post-annotators = ${talismane.core.tokeniser.post-annotators}
+				
 				# if a sentence reader is provided, the text of sentences represented by the tokenised input is provided by this reader, one sentence per line.
 				# otherwise, their text for use in tokenisation features is automatically reconstructed from the manually tokenised input, and the spacing may be erroneous
 				#sentence-reader = null
-				
-				# A path to a file containing tokeniser feature descriptors
-				#features = null
-				
-				# A path to a file containing patterns indicating which areas need further testing by the pattern tokeniser
-				#patterns = null
-				
-				machine-learning = ${talismane.machine-learning}
-				
-				pre-annotators = ${talismane.core.tokeniser.pre-annotators}
-				post-annotators = ${talismane.core.tokeniser.post-annotators}
-				
+	
 				# The max sentences to process. If <= 0 will be ignored.
 				sentence-count = 0
 			
-				# The first sentence index to process. Earlier sentences will be skipped.
-				start-sentence = 0
-				
-				cross-validation {
-					# If greater than 0, the input file will be split into foldCount folds
-					# Typically, 10-fold validation is used, if cross-validation is desired
-					fold-count = 0
-
-					# Used when training in cross-validation
-					# If provided, one of the folds will be excluded, numbered from 0 to foldCount - 1
-					exclude-index = 0
-				}
-			}
-			
-			evaluate {
-				# The file to evaluate against the in-file
-				#input-file = null
-
-				# the regex used to read tokens from the evaluation corpus
-				preannotated-input-pattern = ${talismane.core.tokeniser.train.preannotated-input-pattern}
-				
-				pre-annotators = ${talismane.core.tokeniser.pre-annotators}
-				post-annotators = ${talismane.core.tokeniser.post-annotators}
-				
-				# The max sentences to process. If <= 0 will be ignored.
-				sentence-count = 0
-			
-				# The first sentence index to process. Earlier sentences will be skipped.
+				# The index of the first sentence to process. Earlier sentences will be skipped.
 				start-sentence = 0
 				
 				cross-validation {
@@ -181,7 +159,26 @@ talismane {
 					# Used when evaluating in cross-validation
 					# If provided, only a single fold will be processed, numbered from 0 to foldCount -1
 					include-index = 0
+					
+					# Used when training in cross-validation
+					# If provided, one of the folds will be excluded, numbered from 0 to foldCount - 1
+					exclude-index = 0
 				}
+			}
+			
+			train = ${talismane.core.tokeniser.input} {				
+				# A path to a file containing tokeniser feature descriptors
+				#features = null
+				
+				# A path to a file containing patterns indicating which areas need further testing by the pattern tokeniser
+				#patterns = null
+				
+				machine-learning = ${talismane.machine-learning}
+			}
+			
+			evaluate = ${talismane.core.tokeniser.input} {
+				# The file to evaluate against the in-file
+				#eval-file = null
 			}
 		}
 		
@@ -373,17 +370,6 @@ talismane {
 			#evaluationPattern = null
 			# File path to a regex
 			#evaluationPatternFile = null
-			
-			csv {
-				# Which character should separate cells in the CSV files generated
-				separator = "\t"
-			
-				# Which encoding to generate CSV files in. If blank will use the default encoding for the current OS.
-				#encoding = null
-				
-				# Which locale to use for CSV number formatting. If blank will use the default locale for the current OS.
-				#locale = null
-			}
 			
 			posTagger {
 				# the regex used to read tokens from the evaluation corpus
