--- a/talismane_parent/pom.xml
+++ b/talismane_parent/pom.xml
@@ -187,6 +187,11 @@
 				<artifactId>config</artifactId>
 				<version>1.3.0</version>
 			</dependency>
+			<dependency>
+				<groupId>net.sf.jopt-simple</groupId>
+				<artifactId>jopt-simple</artifactId>
+				<version>5.0.3</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<name>Talismane</name>
