Add full range of command-line arguments

--- a/talismane_machine_learning/src/main/resources/reference.conf
+++ b/talismane_machine_learning/src/main/resources/reference.conf
@@ -8,6 +8,9 @@ talismane {
 		# In how many distinct events should a feature appear in order to get included in the model?
 		cutoff = 0
 		
+		# the number of training iterations
+		iterations = 100
+		
 		# Parameters for linear-svm family models
 		LinearSVM {
 			# The solver type. Options are:
@@ -34,7 +37,7 @@ talismane {
 		# Parameters for Maximum Entropy models
 		MaxEnt {
 			# the number of training iterations
-			iterations = 100
+			iterations = ${talismane.machine-learning.iterations}
 			
 			# Sigma for Gaussian smoothing on maxent training.
 			sigma = 0.0
@@ -46,7 +49,7 @@ talismane {
 		# Parameters for perceptron models
 		Perceptron {
 			# The maximum number of training iterations
-			iterations = 100
+			iterations = ${talismane.machine-learning.iterations}
 			
 			# Exit training early if accuracy hasn't significantly changed in 3 iterations, where "significantly" is defined by this tolerance
 			tolerance = 1e-5
@@ -66,6 +69,9 @@ talismane {
 			#      of scores. This gives us positive scores from 1/e to e. We then
 			#      divide by the total.
 			scoring = "additive"
+			
+			# iterations at which the perceptron model should be saved
+			observation-points = []
 		}
 	}
 }
