Make pos-tagging self-configuring and self-contained

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -20,12 +20,12 @@ talismane {
 		# Modules are used by all commands
 		# If provided, it will override startModule and endModule for analyse/evaluate/compare
 		# It is required for train|process
-		# - language|languageDetector
-		# - sentence|sentenceDetector
-		# - tokenise|tokeniser
-		# - postag|posTagger
-		# - parse|parser
-		#module = null
+		# - languageDetector
+		# - sentenceDetector
+		# - tokeniser
+		# - posTagger
+		# - parser
+		module = parser
 		
 		# if inFile and inDir are not specified, Talismane will read from STDIN
 		# use inFile if a specific file is being read
@@ -204,7 +204,7 @@ talismane {
 		
 		tokeniser {
 			pre-annotators = []
-			post-annotators = []
+			token-sequence-filters = []
 			
 			### The tokeniser type:
 			# - simple: a deterministic tokeniser purely based on filters
@@ -230,7 +230,7 @@ talismane {
 				preannotated-pattern = ".+\t%TOKEN%"
 				
 				pre-annotators = ${talismane.core.tokeniser.pre-annotators}
-				post-annotators = ${talismane.core.tokeniser.post-annotators}
+				token-sequence-filters = ${talismane.core.tokeniser.token-sequence-filters}
 				
 				# if a sentence file is provided, the text of sentences represented by the tokenised input is provided by this file, one sentence per line.
 				# otherwise, their text for use in tokenisation features is automatically reconstructed from the manually tokenised input, and the spacing may be erroneous
@@ -256,6 +256,10 @@ talismane {
 		pos-tagger {
 			# The pos-tag set used when no model has been provided
 			# pos-tag-set
+			
+			pre-annotators = []
+			token-sequence-filters = []
+			postag-sequence-filters = []
 			
 			# A path to the pos-tagger model
 			#model = null
@@ -286,10 +290,14 @@ talismane {
 				
 				# A path to a file containing a regex describing how to read a lexical entry from each line in the corpus
 				# making it possible to maintain and/or transform morphosyntaxic attributes when processing a corpus
-				#corpus-lexical-entry-regex = null		
+				#corpus-lexical-entry-regex = null
+				
+				pre-annotators = ${talismane.core.pos-tagger.pre-annotators}
+				token-sequence-filters = ${talismane.core.pos-tagger.token-sequence-filters}
+				postag-sequence-filters = ${talismane.core.pos-tagger.postag-sequence-filters}
 			}
 			
-			train = ${talismane.core.pos-tagger.input} {				
+			train = ${talismane.core.pos-tagger.input} {
 				# A path to a file containing pos-tagger feature descriptors
 				#features = null
 				
@@ -310,6 +318,9 @@ talismane {
 				output-guesses = false
 				# If we do generate the output guesses, how many guesses (from the beam) to include per analysis
 				output-guess-count = 1
+				
+				# Start-module: tokeniser or pos-tagger
+				start-module = ${talismane.core.module}
 			}
 		}
 		
@@ -320,6 +331,10 @@ talismane {
 			# The list of possible dependency labels when no model has been provided
 			#dependency-labels = null
 			
+			pre-annotators = []
+			token-sequence-filters = []
+			postag-sequence-filters = []
+
 			# A path to the parser model
 			#model = null
 			
@@ -377,9 +392,13 @@ talismane {
 				# A path to a file containing a regex describing how to read a lexical entry from each line in the corpus
 				# making it possible to maintain and/or transform morphosyntaxic attributes when processing a corpus
 				#corpus-lexical-entry-regex = null
+				
+				pre-annotators = ${talismane.core.parser.pre-annotators}
+				token-sequence-filters = ${talismane.core.parser.token-sequence-filters}
+				postag-sequence-filters = ${talismane.core.parser.postag-sequence-filters}
 			}
 			
-			train = ${talismane.core.parser.input} {				
+			train = ${talismane.core.parser.input} {
 				# A path to a file containing parser feature descriptors
 				#features = null
 				
@@ -415,6 +434,9 @@ talismane {
 				output-guesses = false
 				# If we do generate the output guesses, how many guesses (from the beam) to include per analysis
 				output-guess-count = 1
+				
+				# Start-module: tokeniser, pos-tagger or parser
+				start-module = ${talismane.core.module}
 			}
 		}
 		
