Make parsing self-configuring and self-contained

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -102,9 +102,6 @@ talismane {
 			
 			# If true, the input file is processed from the very start (e.g. TXT files). If false, we wait until a text filter tells us to start processing (e.g. XML files).
 			process-by-default = true
-			
-			# If true, feature descriptors will be converted into a single dynamically generated class
-			dynamise-features = false
 		}
 		
 		input {
@@ -373,8 +370,16 @@ talismane {
 			output = ${talismane.core.output} {
 				# if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
 				#template = null
+				
+				### Output the transitions applied
+				# If true, writes the list of transitions that were actually applied, one at a time.
+				include-transition-log = false
 			}
 			
+			# If true, feature descriptors will be converted into a single dynamically generated class
+			# possibly affecting performance (though current testing does not indicate this)
+			dynamise-features = false
+					
 			input = ${talismane.core.input} {
 				# the class used to read the training corpus
 				corpus-reader = com.joliciel.talismane.parser.ParserRegexBasedCorpusReader
@@ -421,10 +426,6 @@ talismane {
 				
 				# Label to be skipped when calculating distance f-scores - for arbitrary distance attachments in the case of punctuation
 				#skip-label = null
-				
-				### Output the transitions applied
-				# If true, writes the list of transitions that were actually applied, one at a time.
-				include-transition-log = false
 				
 				# If included, will output in the transition log, at the end of each parse, the correct sentence and erroneous sentence
 				# if the error concerned any one of these comma-separated dependency labels
