Make Talismane self-configuring and get rid of TalismaneConfig

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -73,6 +73,9 @@ talismane {
 		# The default beam width for all modules
 		beam-width = 1
 		
+		# A character (typically non-printing) which will mark a stop in the input stream and set-off analysis immediately. Must be a single character.
+		end-block-char-code = "\f"
+		
 		analysis {
 			# Annotators used to filter the raw text and transform it into text that needs to be processed
 			text-filters = []
@@ -89,9 +92,6 @@ talismane {
 			# Annotators to be run after full analysis chain
 			post-annotators = []
 			
-			# A character (typically non-printing) which will mark a stop in the input stream and set-off analysis immediately. Must be a single character.
-			end-block-char-code = "\f"
-			
 			# The block size to use when applying filters - if a text filter regex goes beyond the blocksize, Talismane will fail.
 			# This is required because Talismane input is based on streaming, and in order to ensure filters are applied, we have to know when to stop reading and apply filters.
 			# A larger block size will avoid errors due to regex matches that are too large, but will mean longer waits before Talismane returns results when streaming.
@@ -102,6 +102,9 @@ talismane {
 			
 			# If true, the input file is processed from the very start (e.g. TXT files). If false, we wait until a text filter tells us to start processing (e.g. XML files).
 			process-by-default = true
+			
+			# Should analysis stop if an analysis error occurs, or should it simply skip the sentence and continue
+			stop-on-error = true
 		}
 		
 		input {
