--- a/talismane_fr/pom.xml
+++ b/talismane_fr/pom.xml
@@ -72,6 +72,10 @@
 	</build>
 	<dependencies>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.googlecode.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
 			<scope>test</scope>
