--- a/talismane_utils/pom.xml
+++ b/talismane_utils/pom.xml
@@ -57,6 +57,10 @@
 	</build>
 	<dependencies>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+		</dependency>
+		<dependency>
 			<!-- Must be before junit! -->
 			<groupId>com.googlecode.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
