--- a/talismane_parent/pom.xml
+++ b/talismane_parent/pom.xml
@@ -123,6 +123,11 @@
 				<version>1.7.19</version>
 			</dependency>
 			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>jcl-over-slf4j</artifactId>
+				<version>1.7.21</version>
+			</dependency>
+			<dependency>
 				<groupId>de.bwaldvogel</groupId>
 				<artifactId>liblinear</artifactId>
 				<version>1.94</version>
@@ -151,6 +156,12 @@
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-vfs2</artifactId>
 				<version>2.1</version>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.opennlp</groupId>
